# sqpcpu

./: .gitignore  CMakeLists.txt  Dockerfile  MUJOCO_LOG.TXT  README.md  XU.npy  batch_consensus.ipynb  batchctrl.py  batchctrl_indy.py  batchctrl_indy_constanttime.py  benchmark.py  benchmarksbx.py  ctrl.npy  ctrlonly.py  docker-compose.yml  docker.sh  eg.py  forcesbx.ipynb  indycontrol.ipynb  look_at_stats.ipynb  pickpoints.ipynb  pinocchio_template.py  rotationsbx.ipynb  simonly.py  tmp.ipynb  tmp.py  tmp2.ipynb  tmp2.py  tmp4.ipynb  todo  vis.ipynb  xs.npy
examples/: batch_example.cpp  batch_example.py  main.cpp
include/: batch_thneed.hpp  thneed.hpp
include/sqpcpu/: thneed.hpp
src/: batch_thneed.cpp  python_bindings.cpp  thneed.cpp
urdfs/: indy7.urdf  indy7_limited.urdf  panda.urdf
urdfs/mujocomodels/: indy7.urdf  indy7.xml
